--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "start:web": "pnpm --filter web start",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check ."
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
